# video_sorting_cli

./: .gitignore  README.md  main.py  pyproject.toml
video_sorting_cli/: sorting_pattern_example.py
video_sorting_cli/video_sorter/: interface.py  video_sorter.py
