[tool.poetry]
name = "video-sorting-cli"
version = "0.1.0"
description = ""
authors = ["Kairi Sameshima <kairisameshima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
